--- a/Client/Dt.Mgr/Workflow/Mgr/WfTemplateMgr.xaml
+++ b/Client/Dt.Mgr/Workflow/Mgr/WfTemplateMgr.xaml
@@ -27,7 +27,7 @@
                         <StackPanel Padding="10">
                             <a:Dot ID="name" />
                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                                <a:Dot ID="IsLocked" Call="Def.CheckBox" Foreground="{StaticResource 深灰2}" />
+                                <a:Dot ID="Is_Locked" Call="Def.CheckBox" Foreground="{StaticResource 深灰2}" />
                                 <TextBlock Text="锁定" VerticalAlignment="Center" Style="{StaticResource 小灰}" Margin="4,0,0,0" />
                                 <a:Dot ID="Singleton" Call="Def.CheckBox" Foreground="{StaticResource 深灰2}" Margin="30,0,0,0" />
                                 <TextBlock Text="单例" VerticalAlignment="Center" Style="{StaticResource 小灰}" Margin="4,0,0,0" />
