--- a/Client/Dt.Mgr/Workflow/RunTime/CurrentTasks.xaml
+++ b/Client/Dt.Mgr/Workflow/RunTime/CurrentTasks.xaml
@@ -1,30 +1,34 @@
-﻿<a:Win
+﻿<a:Tab
     x:Class="Dt.Mgr.Workflow.CurrentTasks"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Title="待办任务"
+    Icon="信件">
 
-    <a:Pane>
-        <a:Tabs>
-            <a:Tab Title="待办任务">
-                <a:Tab.Menu>
-                    <a:Menu x:Name="_menu">
-                        <a:Mi ID="刷新" Icon="刷新" Click="OnRefresh" />
-                    </a:Menu>
-                </a:Tab.Menu>
-                <a:Lv x:Name="_lv" ItemClick="OnItemClick">
-                    <DataTemplate>
-                        <StackPanel Padding="10">
-                            <a:Dot ID="title" Call="CurrentTasksUI.FormatTitle" />
-                            <StackPanel Orientation="Horizontal" Margin="0,6,0,6">
-                                <a:Dot ID="sender" Call="Def.小灰" />
-                                <TextBlock Text="{Binding [stime],Converter={StaticResource CvDateTime}}" Margin="10,0,0,0" Style="{StaticResource 小灰}" />
-                            </StackPanel>
-                            <a:Dot ID="prcname" Call="Def.小灰" />
-                        </StackPanel>
-                    </DataTemplate>
-                </a:Lv>
-            </a:Tab>
-        </a:Tabs>
-    </a:Pane>
-</a:Win>
+    <a:Tab.Menu>
+        <a:Menu x:Name="_menu">
+            <a:Mi ID="发起新任务" Icon="播放" Call="StartNewWf" />
+            <a:Mi ID="历史任务" Icon="日历" Call="HisTasks" />
+            <a:Mi ID="刷新" Icon="刷新" Call="Refresh" />
+        </a:Menu>
+    </a:Tab.Menu>
+
+    <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
+        <a:Ex.Menu>
+            <a:Menu>
+                <a:Mi ID="打开表单" Icon="编辑" Click="OnOpenForm" />
+                <a:Mi ID="查看日志" Icon="日志" Click="OnOpenLog" />
+                <a:Mi ID="任务管理" Icon="列表" Click="OnOpenList" />
+            </a:Menu>
+        </a:Ex.Menu>
+        <a:Cols>
+            <a:Col ID="kind" Title="　" Call="CurrentTasksUI.FormatKind" Width="42" />
+            <a:Col ID="prcname" Title="工作流程" Width="120" />
+            <a:Col ID="atvname" Title="任务名称" Call="CurrentTasksUI.AtvAndLog" Width="120" />
+            <a:Col ID="formname" Title="表单内容" Width="200" />
+            <a:Col ID="sender" Title="发送者" />
+            <a:Col ID="stime" Title="发送时间" Width="170" Format="yyyy-MM-dd HH:mm:ss" />
+        </a:Cols>
+    </a:Lv>
+</a:Tab>
