--- a/Client/Dt.Mgr/Workflow/Mgr/WfTemplateMgr.xaml
+++ b/Client/Dt.Mgr/Workflow/Mgr/WfTemplateMgr.xaml
@@ -9,11 +9,12 @@
     </a:FuzzySearch>
     <a:Main>
         <a:Tabs>
-            <a:Tab Order="1" Title="列表">
+            <a:Tab Order="1" Title="流程模板列表">
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
                         <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
+                        <a:Mi ID="流程实例" Icon="信件" Click="OnWfInst" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Lv x:Name="_lv" ItemClick="OnItemClick" MaxWidth="600" HorizontalAlignment="Left">
