--- a/Client/Dt.Mgr/Workflow/RunTime/WfLog.xaml
+++ b/Client/Dt.Mgr/Workflow/RunTime/WfLog.xaml
@@ -1,18 +1,17 @@
-﻿<a:Dlg
-    x:Class="Dt.Mgr.Workflow.WfLogDlg"
+﻿<a:Tab
+    x:Class="Dt.Mgr.Workflow.WfLog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="查看日志"
-    IsPinned="True">
+    Title="流程日志">
 
-    <a:Dlg.Menu>
+    <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="详细" Icon="审核" Click="OnLog" />
         </a:Menu>
-    </a:Dlg.Menu>
+    </a:Tab.Menu>
 
     <a:Sketch x:Name="_sketch" IsReadOnly="True" />
-</a:Dlg>
+</a:Tab>
 
     
