--- a/Client/Dt.Mgr/Rbac/Role/RoleUserList.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/RoleUserList.xaml
@@ -15,23 +15,16 @@
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv">
+    <a:Lv x:Name="_lv" ViewMode="Table">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
-        <DataTemplate>
-            <StackPanel Padding="6">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="&#xE060;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" />
-                    <a:Dot ID="name" VerticalAlignment="Center" Margin="4,0,0,0" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
-                    <TextBlock Text="&#xE0C0;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" />
-                    <a:Dot ID="phone" VerticalAlignment="Center" Margin="4,0,0,0" />
-                </StackPanel>
-            </StackPanel>
-        </DataTemplate>
+        <a:Cols>
+            <a:Col ID="acc" Title="账号" Width="120" />
+            <a:Col ID="phone" Title="手机号" Width="130" />
+            <a:Col ID="name" Title="姓名" />
+        </a:Cols>
     </a:Lv>
 </a:Tab>
