--- a/Client/Dt.Mgr/Rbac/User/UserList.xaml
+++ b/Client/Dt.Mgr/Rbac/User/UserList.xaml
@@ -7,8 +7,9 @@
 
     <a:Tab.Resources>
         <a:Cols x:Key="TableView">
-            <a:Col ID="name" Title="账号" Width="160" />
-            <a:Col ID="phone" Title="手机号" Width="160" />
+            <a:Col ID="acc" Title="账号" Width="120" />
+            <a:Col ID="phone" Title="手机号" Width="130" />
+            <a:Col ID="name" Title="姓名" />
             <a:Col ID="ctime" Title="创建时间" Width="120" />
             <a:Col ID="mtime" Title="修改时间" Width="120" />
         </a:Cols>
@@ -16,8 +17,9 @@
         <DataTemplate x:Key="ListView">
             <StackPanel Padding="6">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="&#xE060;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" />
-                    <a:Dot ID="name" VerticalAlignment="Center" Margin="4,0,0,0" />
+                    <TextBlock Text="&#xE062;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" />
+                    <a:Dot ID="acc" VerticalAlignment="Center" Margin="4,0,10,0" />
+                    <a:Dot ID="name" VerticalAlignment="Center" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,10">
                     <TextBlock Text="&#xE0C0;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" />
