--- a/Client/Dt.Mgr/Rbac/User/UserQuery.xaml
+++ b/Client/Dt.Mgr/Rbac/User/UserQuery.xaml
@@ -7,9 +7,10 @@
     Icon="漏斗">
 
     <a:QueryFv x:Name="_fv">
-        <a:CText ID="Name" Title="账号" Query="Editable" />
-        <a:CText ID="Phone" Title="手机号" Query="Editable" />
-        <a:CBool ID="Expired" Title="是否停用" Query="Editable" />
+        <a:CText ID="acc" Title="账号" Query="Editable" />
+        <a:CText ID="phone" Title="手机号" Query="Editable" />
+        <a:CText ID="name" Title="姓名" Query="Editable" />
+        <a:CBool ID="expired" Title="是否停用" Query="Editable" />
         <a:CDate ID="Ctime" Title="创建时间" Query="Editable" />
         <a:CDate ID="Mtime" Title="修改时间" Query="Editable" />
         <CheckBox Content="筛选条件之间【与】关系" IsChecked="{Binding IsAnd,ElementName=_fv,Mode=TwoWay}" />
