--- a/Client/Dt.Mgr/Workflow/RunTime/HistoryTasks.xaml
+++ b/Client/Dt.Mgr/Workflow/RunTime/HistoryTasks.xaml
@@ -7,20 +7,7 @@
     <a:Pane>
         <a:Tabs>
             <a:Tab Title="查找">
-                <a:Tab.Menu>
-                    <a:Menu>
-                        <a:Mi ID="查询" Icon="搜索" ShowInPhone="Icon" Click="OnSearch" />
-                    </a:Menu>
-                </a:Tab.Menu>
-                <a:Fv x:Name="_fv">
-                    <a:CBar Title="时间范围" />
-                    <StackPanel Orientation="Horizontal">
-                        <Button Content="本月" Click="OnMonthClick"/>
-                        <Button Content="本季度" Click="OnQuarterClick"/>
-                        <Button Content="本年" Click="OnYearClick" />
-                    </StackPanel>
-                    <a:CDate ID="start" Title="起始时间" />
-                    <a:CDate ID="end" Title="终止时间" />
+                <a:QueryFv x:Name="_fv">
                     <a:CList ID="statusname" Title="状态" SrcID="id" TgtID="status">
                         <a:CList.Items>
                             <a:IDStr ID="0" Str="流转中" />
@@ -29,8 +16,18 @@
                             <a:IDStr ID="3" Str="全部" />
                         </a:CList.Items>
                     </a:CList>
-                    <a:CBool ID="type" Title="所有经办（同一任务多次经手）" TitleWidth="250" />
-                </a:Fv>
+                    <a:CList ID="prcdname" Title="工作流程" SrcID="id" TgtID="prcd_id" LoadData="OnLoadPrcd" />
+                    <a:CBar Title="时间范围" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="本月" Click="OnMonthClick"/>
+                        <Button Content="本季度" Click="OnQuarterClick"/>
+                        <Button Content="本年" Click="OnYearClick" />
+                    </StackPanel>
+                    <a:CDate ID="start" Title="起始时间" />
+                    <a:CDate ID="end" Title="终止时间" />
+                    
+                    <a:CBool ID="type" Title="所有经办（同一任务多次经手）" ShowTitle="False" />
+                </a:QueryFv>
             </a:Tab>
         </a:Tabs>
     </a:Pane>
@@ -43,18 +40,17 @@
                             <a:Mi ID="查看表单" Icon="全选" Click="OnShowInst" />
                             <a:Mi ID="追回" Icon="追回" Click="OnRetrieve" />
                             <a:Mi ID="日志" Icon="审核" Click="OnShowLog" />
+                            <a:Mi ID="任务管理" Icon="列表" Click="OnOpenList" />
                         </a:Menu>
                     </a:Ex.Menu>
-                    <DataTemplate>
-                        <StackPanel Padding="10">
-                            <a:Dot ID="title" Call="HistoryTaskUI.FormatTile" />
-                            <StackPanel Orientation="Horizontal" Margin="0,6,0,6">
-                                <a:Dot ID="sender" Call="Def.小灰" />
-                                <TextBlock Text="{Binding [stime],Converter={StaticResource CvDateTime}}" Margin="10,0,0,0" Style="{StaticResource 小灰}" />
-                            </StackPanel>
-                            <a:Dot ID="prcname" Call="Def.小灰" />
-                        </StackPanel>
-                    </DataTemplate>
+                    <a:Cols>
+                        <a:Col ID="status" Title="　" Call="HistoryTaskUI.FormatStatus" Width="42" />
+                        <a:Col ID="prcname" Title="工作流程" Width="120" />
+                        <a:Col ID="atvname" Title="任务名称" Call="CurrentTasksUI.AtvAndLog" Width="120" />
+                        <a:Col ID="formname" Title="表单内容" Width="200" />
+                        <a:Col ID="sender" Title="发送者" />
+                        <a:Col ID="stime" Title="发送时间" Width="170" Format="yyyy-MM-dd HH:mm:ss" />
+                    </a:Cols>
                 </a:Lv>
             </a:Tab>
         </a:Tabs>
