--- a/Client/Dt.MgrDemo/Workflow/收文Form.xaml
+++ b/Client/Dt.MgrDemo/Workflow/收文Form.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<a:Tab
     x:Class="Dt.MgrDemo.Workflow.收文Form"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,4 +14,4 @@
         <a:CText ID="综合部经理意见" />
         <a:CTip ID="收文完成时间" />
     </a:Fv>
-</UserControl>
+</a:Tab>
