--- a/Client/Dt.MgrDemo/多对多/角色/权限4角色Dlg.xaml
+++ b/Client/Dt.MgrDemo/多对多/角色/权限4角色Dlg.xaml
@@ -12,10 +12,8 @@
     </a:Dlg.Menu>
 
     <a:Lv x:Name="_lv" SelectionMode="Multiple">
-        <DataTemplate>
-            <StackPanel Padding="10">
-                <a:Dot ID="权限名称" />
-            </StackPanel>
-        </DataTemplate>
+        <a:Cols>
+            <a:Col ID="权限名称" />
+        </a:Cols>
     </a:Lv>
 </a:Dlg>
