--- a/Client/Dt.Mgr/Rbac/Group/GroupList.xaml
+++ b/Client/Dt.Mgr/Rbac/Group/GroupList.xaml
@@ -5,25 +5,10 @@
     xmlns:a="using:Dt.Base"
     Title="分组列表">
 
-    <a:Tab.Resources>
-        <a:Cols x:Key="TableView">
-            <a:Col ID="Name" Title="组名" Width="180" />
-            <a:Col ID="Note" Title="组描述" Width="150" />
-        </a:Cols>
-
-        <DataTemplate x:Key="ListView">
-            <StackPanel Padding="10">
-                <a:Dot ID="Name" />
-                <a:Dot ID="Note" Call="Def.小灰" />
-            </StackPanel>
-        </DataTemplate>
-    </a:Tab.Resources>
-
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
-            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
         </a:Menu>
     </a:Tab.Menu>
 
@@ -33,5 +18,9 @@
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
+        <a:Cols>
+            <a:Col ID="Name" Title="组名" Width="180" />
+            <a:Col ID="Note" Title="组描述" Width="150" />
+        </a:Cols>
     </a:Lv>
 </a:Tab>
