--- a/Client/Dt.MgrDemo/单实体/基础/实体List.xaml
+++ b/Client/Dt.MgrDemo/单实体/基础/实体List.xaml
@@ -5,34 +5,6 @@
     xmlns:a="using:Dt.Base"
     Title="列表">
 
-    <a:Tab.Resources>
-        <a:Cols x:Key="TableView">
-            <a:Col ID="序列" />
-            <a:Col ID="限长4" />
-            <a:Col ID="不重复" />
-            <a:Col ID="禁止选中" />
-            <a:Col ID="禁止保存" />
-            <a:Col ID="禁止删除" />
-            <a:Col ID="值变事件" />
-            <a:Col ID="创建时间" />
-            <a:Col ID="修改时间" />
-        </a:Cols>
-
-        <DataTemplate x:Key="ListView">
-            <StackPanel Padding="10">
-                <a:Dot ID="序列" />
-                <a:Dot ID="限长4" />
-                <a:Dot ID="不重复" />
-                <a:Dot ID="禁止选中" />
-                <a:Dot ID="禁止保存" />
-                <a:Dot ID="禁止删除" />
-                <a:Dot ID="值变事件" />
-                <a:Dot ID="创建时间" />
-                <a:Dot ID="修改时间" />
-            </StackPanel>
-        </DataTemplate>
-    </a:Tab.Resources>
-
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
@@ -41,7 +13,6 @@
             <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
             <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
             <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
-            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
         </a:Menu>
     </a:Tab.Menu>
 
@@ -51,5 +22,16 @@
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
+        <a:Cols>
+            <a:Col ID="序列" />
+            <a:Col ID="限长4" />
+            <a:Col ID="不重复" />
+            <a:Col ID="禁止选中" />
+            <a:Col ID="禁止保存" />
+            <a:Col ID="禁止删除" />
+            <a:Col ID="值变事件" />
+            <a:Col ID="创建时间" Width="110" />
+            <a:Col ID="修改时间" Width="110" />
+        </a:Cols>
     </a:Lv>
 </a:Tab>
