--- a/Client/Dt.MgrDemo/单实体/虚拟/虚拟List.xaml
+++ b/Client/Dt.MgrDemo/单实体/虚拟/虚拟List.xaml
@@ -5,8 +5,24 @@
     xmlns:a="using:Dt.Base"
     Title="列表">
 
-    <a:Tab.Resources>
-        <a:Cols x:Key="TableView">
+    <a:Tab.Menu>
+        <a:Menu>
+            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
+            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
+            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
+            <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
+            <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
+            <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
+        </a:Menu>
+    </a:Tab.Menu>
+
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
+        <a:Ex.Menu>
+            <a:Menu>
+                <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
+            </a:Menu>
+        </a:Ex.Menu>
+        <a:Cols>
             <a:Col ID="主表名称" />
             <a:Col ID="限长4" />
             <a:Col ID="不重复" />
@@ -17,39 +33,5 @@
             <a:Col ID="禁止删除" />
             <a:Col ID="值变事件" />
         </a:Cols>
-
-        <DataTemplate x:Key="ListView">
-            <StackPanel Padding="10">
-                <a:Dot ID="主表名称" />
-                <a:Dot ID="限长4" />
-                <a:Dot ID="不重复" />
-                <a:Dot ID="扩展1名称" />
-                <a:Dot ID="禁止选中" />
-                <a:Dot ID="禁止保存" />
-                <a:Dot ID="扩展2名称" />
-                <a:Dot ID="禁止删除" />
-                <a:Dot ID="值变事件" />
-            </StackPanel>
-        </DataTemplate>
-    </a:Tab.Resources>
-
-    <a:Tab.Menu>
-        <a:Menu>
-            <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
-            <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" Visibility="Collapsed" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
-            <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
-            <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
-            <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
-            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
-        </a:Menu>
-    </a:Tab.Menu>
-
-    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
-        <a:Ex.Menu>
-            <a:Menu>
-                <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
-            </a:Menu>
-        </a:Ex.Menu>
     </a:Lv>
 </a:Tab>
