--- a/Client/Dt.MgrDemo/多对多/用户/用户List.xaml
+++ b/Client/Dt.MgrDemo/多对多/用户/用户List.xaml
@@ -5,27 +5,10 @@
     xmlns:a="using:Dt.Base"
     Title="用户列表">
 
-    <a:Tab.Resources>
-        <a:Cols x:Key="TableView">
-            <a:Col ID="手机号" />
-            <a:Col ID="姓名" />
-            <a:Col ID="密码" />
-        </a:Cols>
-
-        <DataTemplate x:Key="ListView">
-            <StackPanel Padding="10">
-                <a:Dot ID="手机号" />
-                <a:Dot ID="姓名" />
-                <a:Dot ID="密码" />
-            </StackPanel>
-        </DataTemplate>
-    </a:Tab.Resources>
-
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
-            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
         </a:Menu>
     </a:Tab.Menu>
 
@@ -35,5 +18,10 @@
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
+        <a:Cols>
+            <a:Col ID="手机号" />
+            <a:Col ID="姓名" />
+            <a:Col ID="密码" />
+        </a:Cols>
     </a:Lv>
 </a:Tab>
