--- a/Tools/DtTemplates/Dt/ManyToMany/Res/MainList.xaml
+++ b/Tools/DtTemplates/Dt/ManyToMany/Res/MainList.xaml
@@ -5,21 +5,10 @@
     xmlns:a="using:Dt.Base"
     Title="$mainroot$列表">
 
-    <a:Tab.Resources>
-        <a:Cols x:Key="TableView">
-$lvcols$
-        </a:Cols>
-
-        <DataTemplate x:Key="ListView">
-$lvtemp$
-        </DataTemplate>
-    </a:Tab.Resources>
-
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Click="OnToSearch" />
             <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Scope="Phone" Click="OnAdd" />
-            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
         </a:Menu>
     </a:Tab.Menu>
 
@@ -29,5 +18,8 @@ $lvtemp$
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
+        <a:Cols>
+$lvcols$
+        </a:Cols>
     </a:Lv>
 </a:Tab>
