--- a/Tools/DtTemplates/Dt/Single/Res/EntityList.xaml
+++ b/Tools/DtTemplates/Dt/Single/Res/EntityList.xaml
@@ -5,16 +5,6 @@
     xmlns:a="using:Dt.Base"
     Title="列表">
 
-    <a:Tab.Resources>
-        <a:Cols x:Key="TableView">
-$lvcols$
-        </a:Cols>
-
-        <DataTemplate x:Key="ListView">
-$lvtemp$
-        </DataTemplate>
-    </a:Tab.Resources>
-
     <a:Tab.Menu>
         <a:Menu>
             <a:Mi ID="搜索" Icon="搜索" ShowInPhone="Icon" Scope="Phone" Click="OnToSearch" />
@@ -23,7 +13,6 @@ $lvtemp$
             <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
             <a:Mi ID="选择" Icon="全选" Click="OnMultiMode" />
             <a:Mi ID="取消" Icon="全选" Click="OnCancelMulti" Visibility="Collapsed" />
-            <a:Mi x:Name="_mi" ID="列表" Icon="列表" ShowInPhone="Icon" Click="OnToggleView" />
         </a:Menu>
     </a:Tab.Menu>
 
@@ -33,5 +22,8 @@ $lvtemp$
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
             </a:Menu>
         </a:Ex.Menu>
+        <a:Cols>
+$lvcols$
+        </a:Cols>
     </a:Lv>
 </a:Tab>
