--- a/Client/Dt.UIDemo/ListView/LvFilter.xaml
+++ b/Client/Dt.UIDemo/ListView/LvFilter.xaml
@@ -9,9 +9,9 @@
             <a:Tab Order="1" Title="表格">
                 <a:Lv x:Name="_lv" ViewMode="Table">
                     <a:Cols>
-                        <a:Col ID="xm" Title="姓名" Width="120" />
+                        <a:Col ID="xm" Title="姓名" />
                         <a:Col ID="bh" Title="编号" Width="80" />
-                        <a:Col ID="chushengrq" Title="出生日期" Width="120" />
+                        <a:Col ID="chushengrq" Title="出生日期" />
                         <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
                         <a:Col ID="xb" Title="性别" Width="60" FontSize="12" />
                         <a:Col ID="hunfou" Title="婚否" Width="60" />
