--- a/Client/Dt.Mgr/Rbac/Role/User4RoleDlg.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/User4RoleDlg.xaml
@@ -13,7 +13,7 @@
 
     <a:Lv x:Name="_lv" SelectionMode="Multiple" ViewMode="Table">
         <a:Cols>
-            <a:Col ID="acc" Title="账号" Width="120" />
+            <a:Col ID="acc" Title="账号" />
             <a:Col ID="phone" Title="手机号" Width="130" />
             <a:Col ID="name" Title="姓名" />
         </a:Cols>
