--- a/Client/Dt.Mgr/Rbac/User/UserList.xaml
+++ b/Client/Dt.Mgr/Rbac/User/UserList.xaml
@@ -23,11 +23,11 @@
             </a:Menu>
         </a:Ex.Menu>
         <a:Cols>
-            <a:Col ID="acc" Title="账号" Width="120" />
+            <a:Col ID="acc" Title="账号" />
             <a:Col ID="phone" Title="手机号" Width="130" />
             <a:Col ID="name" Title="姓名" />
-            <a:Col ID="ctime" Title="创建时间" Width="120" />
-            <a:Col ID="mtime" Title="修改时间" Width="120" />
+            <a:Col ID="ctime" Title="创建时间" />
+            <a:Col ID="mtime" Title="修改时间" />
         </a:Cols>
     </a:Lv>
 </a:Tab>
