--- a/Client/Dt.Mgr/Workflow/RunTime/HistoryTasks.xaml
+++ b/Client/Dt.Mgr/Workflow/RunTime/HistoryTasks.xaml
@@ -45,9 +45,9 @@
                     </a:Ex.Menu>
                     <a:Cols>
                         <a:Col ID="status" Title="　" Call="HistoryTaskUI.FormatStatus" Width="42" />
-                        <a:Col ID="prcname" Title="工作流程" Width="120" />
-                        <a:Col ID="atvname" Title="任务名称" Width="120" />
-                        <a:Col ID="formname" Title="表单内容" Width="200" />
+                        <a:Col ID="prcname" Title="工作流程" />
+                        <a:Col ID="atvname" Title="任务名称" />
+                        <a:Col ID="formname" Title="表单内容" Width="*" />
                         <a:Col ID="sender" Title="发送者" />
                         <a:Col ID="stime" Title="发送时间" Width="170" Format="yyyy-MM-dd HH:mm:ss" />
                     </a:Cols>
