--- a/Client/Dt.UIDemo/FormView/FvListDemo.xaml
+++ b/Client/Dt.UIDemo/FormView/FvListDemo.xaml
@@ -108,8 +108,8 @@
                             <a:Col ID="name" Title="姓名" Width="160" />
                             <a:Col ID="phone" Title="手机号" Width="160" />
                             <a:Col ID="sex" Title="性别" Width="60" />
-                            <a:Col ID="ctime" Title="创建时间" Width="120" />
-                            <a:Col ID="mtime" Title="修改时间" Width="120" />
+                            <a:Col ID="ctime" Title="创建时间" />
+                            <a:Col ID="mtime" Title="修改时间" />
                         </a:Cols>
                     </a:CList>
                     
