--- a/Client/Dt.UIDemo/ListView/LvTable.xaml
+++ b/Client/Dt.UIDemo/ListView/LvTable.xaml
@@ -5,10 +5,20 @@
     xmlns:a="using:Dt.Base">
 
     <a:Win.Resources>
-        <a:Cols x:Key="View1">
-            <a:Col ID="xm" Title="姓名" Width="120" />
+        <a:Cols x:Key="普通">
             <a:Col ID="bh" Title="编号" Width="80" />
-            <a:Col ID="chushengrq" Title="出生&#10;日期" Width="120" />
+            <a:Col ID="xm" Title="姓名" />
+            <a:Col ID="hunfou" Title="婚否" Width="60" />
+            <a:Col ID="bumen" Title="所属部门" Width="160" />
+            <a:Col ID="chushengrq" Title="出生日期" />
+            <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
+            <a:Col ID="xb" Title="性别" Width="60" />
+        </a:Cols>
+        
+        <a:Cols x:Key="列头多行">
+            <a:Col ID="xm" Title="姓名" />
+            <a:Col ID="bh" Title="编号" Width="80" />
+            <a:Col ID="chushengrq" Title="出生&#10;日期" />
             <a:Col ID="shenfenzh" Title="身份&#10;证号@码" Width="200" />
             <a:Col ID="xb" Title="性别" Width="60" FontSize="12" />
             <a:Col ID="hunfou" Title="婚否" Width="60" />
@@ -17,14 +27,12 @@
             <a:Col ID="note" Title="备注" Width="150" />
         </a:Cols>
 
-        <a:Cols x:Key="View2">
+        <a:Cols x:Key="非固定列宽">
             <a:Col ID="bh" Title="编号" Width="80" />
-            <a:Col ID="xm" Title="姓名" Width="120" />
-            <a:Col ID="hunfou" Title="婚否" Width="60" />
-            <a:Col ID="bumen" Title="所属部门" Width="160" />
-            <a:Col ID="chushengrq" Title="出生日期" Width="120" />
-            <a:Col ID="shenfenzh" Title="身份证号码" Width="200" />
-            <a:Col ID="xb" Title="性别" Width="60" />
+            <a:Col ID="xm" Title="姓名" />
+            <a:Col ID="hunfou" Title="婚否" />
+            <a:Col ID="bumen" Title="所属部门" Width="0.5*" />
+            <a:Col ID="note" Title="备注" Width="*" />
         </a:Cols>
     </a:Win.Resources>
 
@@ -60,15 +68,18 @@
                     <a:CBool Title="显示分组导航" ID="ShowGroupHeader" />
                     <a:CBool Title="显示行分割线" ID="ShowItemBorder" />
                     <a:CNum Title="行/项目高" ID="ItemHeight" />
+                    <a:CBar Title="列定义" />
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="列头多行" Click="OnToggleView" Tag="列头多行" />
+                        <Button Content="普通" Click="OnToggleView" Tag="普通" />
+                        <Button Content="非固定列宽" Click="OnToggleView" Tag="非固定列宽" />
+                    </StackPanel>
                     <a:CBar Title="其他" />
                     <StackPanel Orientation="Horizontal">
                         <Button Content="自动行高" Click="OnAutoHeight" />
                         <Button Content="表单列表" Click="OnFormView" />
                         <Button Content="无选择行" Click="OnSelectNull" />
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
                         <Button Content="随机滚动" Click="OnScroll" />
-                        <Button Content="切换视图" Click="OnToggleView" />
                     </StackPanel>
                 </a:Fv>
             </a:Tab>
