--- a/Client/Dt.Mgr/Module/Option/OptionGroupOptionList.xaml
+++ b/Client/Dt.Mgr/Module/Option/OptionGroupOptionList.xaml
@@ -15,7 +15,7 @@
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ItemClick="OnItemClick" ViewMode="Table">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="上移" Icon="向上" Click="OnMoveUp" />
