--- a/Client/Dt.Mgr/Rbac/Permission/PerList.xaml
+++ b/Client/Dt.Mgr/Rbac/Permission/PerList.xaml
@@ -11,7 +11,7 @@
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ViewMode="Table" ItemClick="OnItemClick" ItemDoubleClick="OnItemDoubleClick">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick" ItemDoubleClick="OnItemDoubleClick">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="编辑" Icon="编辑" Click="OnEdit" />
