--- a/Client/Dt.Mgr/Rbac/Role/RolePerList.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/RolePerList.xaml
@@ -15,7 +15,7 @@
         </a:Menu>
     </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ViewMode="Table" GroupName="modname">
+    <a:Lv x:Name="_lv" GroupName="modname">
         <a:Ex.Menu>
             <a:Menu>
                 <a:Mi ID="删除" Icon="垃圾箱" Click="OnDel" />
