--- a/Client/Dt.Mgr/Rbac/Role/User4RoleDlg.xaml
+++ b/Client/Dt.Mgr/Rbac/Role/User4RoleDlg.xaml
@@ -11,7 +11,7 @@
         </a:Menu>
     </a:Dlg.Menu>
 
-    <a:Lv x:Name="_lv" SelectionMode="Multiple" ViewMode="Table">
+    <a:Lv x:Name="_lv" SelectionMode="Multiple">
         <a:Cols>
             <a:Col ID="acc" Title="账号" />
             <a:Col ID="phone" Title="手机号" Width="130" />
