--- a/Client/Dt.Mgr/Rbac/User/UserPerListDlg.xaml
+++ b/Client/Dt.Mgr/Rbac/User/UserPerListDlg.xaml
@@ -5,7 +5,7 @@
     xmlns:a="using:Dt.Base"
     Title="已授予权限">
 
-    <a:Lv x:Name="_lv" ViewMode="Table" GroupName="modname">
+    <a:Lv x:Name="_lv" GroupName="modname">
         <a:Cols>
             <a:Col ID="funcname" Title="功能" />
             <a:Col ID="name" Title="权限" Width="160" />
