--- a/Demo/Demo.UI/Chart2/BaseChart2.xaml
+++ b/Demo/Demo.UI/Chart2/BaseChart2.xaml
@@ -40,6 +40,7 @@
                             <Button Content="轴线跨度" Click="OnAxisSpan" />
                             <Button Content="轴线跨度样式" Click="OnAxisSpanStyle" />
                         </StackPanel>
+                        <Button Content="标注" Click="OnCallout" />
                     </StackPanel>
                 </ScrollViewer>
             </a:Tab>
